--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 DB_URL=mongodb+srv://sfontdevila:5wWiBPk24PPPrIwV@cluster0.qrhmu8d.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+JWT_KEY=aaaaaaa
 CLOUD_NAME=dzt0qtd8o
 API_KEY=582446583775673
 API_SECRET=J5jpf-8C3EClAtIH_ZyGkmOWBPA
