--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
     "seedProducto": "node ./src/seeds/seedProducto/seedProducto.js",
     "seedUsuario": "node ./src/seeds/seedUsuario/seedUsuario.js",
     "seedVenta": "node ./src/seeds/seedVenta/seedVenta.js"
-
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "csvtojson": "^2.0.10",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "m": "^1.9.1",
     "mongodb": "^6.18.0",
     "mongoose": "^8.16.5",
